# deimos

deimos_ws/src/rover_teleop/: CMakeLists.txt  package.xml
deimos_ws/src/rover_teleop/config/: base_local_planner_params.yaml  costmap_common_params.yaml  f310_params.yaml  global_costmap_params.yaml  laser_filter_chain.yaml  local_costmap_params.yaml  rover.xml  rover_teleop.rviz  slam_toolbox_params.yaml  sophia_nav.rviz  temp_humidity.perspective
deimos_ws/src/rover_teleop/launch/: 2arduino.launch  amcl.launch  arm_and_drivetrain.launch  move_base.launch  realsense_bringup.launch  remote_sophia_nav.launch  robot_config.launch  rover_teleop.launch  sci_drive.launch  sci_teleop.launch  sophia_configuration.launch  sophia_nav.launch  usb_cam.launch
deimos_ws/src/rover_teleop/maps/: staticroom1.yaml
deimos_ws/src/rover_teleop/scripts/: arm_teleop.py  aruco_detector.py  camerafinal.py  clientfinal.py  f310_commands.py  f310_twist.py  odom_publisher.py  odom_tf_broadcaster.py  realsense_to_pointcloud.cpp  realsense_to_pointcloud.py  sci_teleop.py  tf_broadcaster.py  tf_listener.py
deimos_ws/src/rover_teleop/scripts/arduino_master/: arduino_master.ino
deimos_ws/src/rover_teleop/scripts/arduino_master2/: arduino_master2.ino
deimos_ws/src/rover_teleop/scripts/arduino_master4/: arduino_master4.ino
deimos_ws/src/rover_teleop/scripts/arduino_master5/: arduino_master5.ino
deimos_ws/src/rover_teleop/scripts/arduino_science/: arduino_science.ino
deimos_ws/src/rover_teleop/scripts/tankturntest/: tankturntest.ino
(+1 files in other folders)
